Integrate docker container deployment
Containerizing the back end allows for standardized and easier deployment once a production platform has been chosen.